<resources>
    <string name="app_name">HideItLogin</string>

    <string name="bbp">Breaking Bad Property</string>
    <string name="u_name">Username</string>
    <string name="pass">Password</string>
    <string name="login_button">Sign In</string>
    <string name="attempts">Attempts remaining: </string>
    <string name="welcome" > Welcome XYZ</string> <!--M ay rest this in java to put user name -->



    <!-- register strings -->

    <string name="secureQuest"> Security Question: What is your greatest fear?</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpHeading"> Sign Up</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="f_pass">Forgot Password ?</string>
    <string name="title_activity_welcome_page">WelcomePage</string>

    <string name="hello_world">Hello world!</string>


</resources>
