<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/app_name"
    android:background="@drawable/background" >

    <TextView android:text="@string/bbp" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bbp"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
        android:theme="@android:style/TextAppearance.DeviceDefault.Large" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/u_name"
        android:layout_marginTop="71dp"
        android:hint="@string/u_name"
        android:layout_below="@+id/bbp"
        android:layout_centerHorizontal="true"
        android:textColorHint="#ffffffff"
        android:textColorHighlight="#d1b0b0b0" />

    <!--android:layout_below="@+id/pass" -->


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:hint="Password"
        android:layout_below="@+id/u_name"
        android:layout_alignLeft="@+id/u_name"
        android:layout_alignStart="@+id/u_name"
        android:textColorHint="#ffffffff"
        android:textColorHighlight="#d1b0b0b0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:onClick="login"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/attemptNum"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attempts"
        android:id="@+id/attempts"
        android:layout_below="@+id/pass"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass"
        android:layout_marginTop="29dp"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/attemptNum"
        android:text="numHere"
        android:layout_alignTop="@+id/attempts"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignStart="@+id/login_button"
        android:layout_marginLeft="30dp"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/signUpButton"
        android:onClick="signUp"
        android:layout_alignTop="@+id/login_button"
        android:layout_alignLeft="@+id/attempts"
        android:layout_alignStart="@+id/attempts" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/f_pass"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:linksClickable="true"
        android:longClickable="false"
        android:textIsSelectable="true"
        android:layout_marginTop="33dp"
        android:clickable="true"
        android:layout_below="@+id/login_button"
        android:layout_alignRight="@+id/bbp"
        android:layout_alignEnd="@+id/bbp" />

</RelativeLayout>
